--- a/.editorconfig
+++ b/.editorconfig
@@ -22,6 +22,9 @@ trim_trailing_whitespace = true
 [*.sln]
 indent_style = tab
 
+[*.yml]
+indent_size = 2
+
 # Visual Studio XML Project Files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
 indent_size = 2
