--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,33 +3,36 @@
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
-trigger:
-- master
+pr:
+  branches:
+    include:
+      - master
 
 pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
+  solution: 'DynamoDBTransactionUtilities.sln'
   buildConfiguration: 'Release'
 
 steps:
 - task: DotNetCoreInstaller@0
+  displayName: 'Install dotnet core'
   inputs:
     version: '2.2.100'
-  
+
 - task: NuGetToolInstaller@0
+  displayName: 'Nuget Tool installer'
 
 - task: DotNetCoreCLI@2
+  displayName: 'Restore'
   inputs:
     command: 'restore'
-    projects: '$(solutionDir)'
-    feedsToUse: 'select'
-    versioningScheme: 'off'
 
 - task: DotNetCoreCLI@2
+  displayName: 'Build'
   inputs:
     command: 'build'
     feedsToUse: 'select'
     versioningScheme: 'off'
+    arguments: '--configuration $(buildConfiguration)'
