--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,9 @@ steps:
     feedsToUse: 'select'
     versioningScheme: 'off'
     arguments: '--configuration $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Test'
+  inputs:
+    command: 'test'
+    arguments: '--configuration $(buildConfiguration) --collect "Code coverage" --no-restore --no-build'
