--- a/src/DynamoDBTransactionUtilities/DynamoDBTransactionUtilities.csproj
+++ b/src/DynamoDBTransactionUtilities/DynamoDBTransactionUtilities.csproj
@@ -1,9 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Evil Pilaf</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
