--- a/ci/masterBuild.yml
+++ b/ci/masterBuild.yml
@@ -47,11 +47,11 @@ steps:
   displayName: 'Publish'
   inputs:
     command: 'publish'
-    arguments: '--configuration $(buildConfiguration) --no-build'
+    arguments: '.\src\DynamoDBTransactionUtilities\ --output $(Build.ArtifactStagingDirectory) --configuration $(buildConfiguration) --no-build'
 
 - task: PublishBuildArtifacts@1
 
-- script: dotnet pack /p:PackageVersion=$(version)  # define version variable elsewhere in your pipeline
+- script: dotnet pack
 - task: NuGetCommand@2
   inputs:
     command: push
