--- a/ci/masterBuild.yml
+++ b/ci/masterBuild.yml
@@ -45,7 +45,8 @@ steps:
   displayName: 'Publish'
   inputs:
     command: 'publish'
-    arguments: '.\src\DynamoDBTransactionUtilities\ --output $(Build.ArtifactStagingDirectory) --configuration $(buildConfiguration) --no-build'
+    publishWebProjects: False
+    arguments: '--output $(Build.ArtifactStagingDirectory) --configuration $(buildConfiguration) --no-build'
 
 - task: PublishBuildArtifacts@1
   displayName: "Publish build artifacts"
