--- a/ci/masterBuild.yml
+++ b/ci/masterBuild.yml
@@ -52,9 +52,15 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: "Publish build artifacts"
 
-- script: dotnet pack
+- task: DotNetCoreCLI@2
+  displayName: 'Package'
+  inputs:
+    command: 'pack'
+    arguments: '--output $(Build.ArtifactStagingDirectory) --configuration $(buildConfiguration) --no-build'
+
 - task: NuGetCommand@2
   inputs:
     command: push
     nuGetFeedType: external
     publishFeedCredentials: 'NuGetFeed'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg' # Required when command == Push
