--- a/src/DynamoDBTransactionUtilities/DynamoDBTransactionUtilities.csproj
+++ b/src/DynamoDBTransactionUtilities/DynamoDBTransactionUtilities.csproj
@@ -1,17 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <PackageName>DynamoDBEasyAttributeValue</PackageName>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Evil Pilaf</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>0.2.0</Version>
     <PackageTags>DynamoDB;AWS;DynamoDBv2;AttributeValue</PackageTags>
     <RepositoryURL>https://github.com/evilpilaf/AwsDynamoDBEasyAttributeValue</RepositoryURL>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.101.11" />
+    <PackageReference Include="MinVer" Version="1.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
+
+  <Target Name="SetAssemblyVersion" AfterTargets="MinVer">
+    <PropertyGroup>
+      <PackageVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch).0</PackageVersion>
+      <AssemblyVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch).0</AssemblyVersion>
+      <FileVersion>$(PackageVersion)</FileVersion>
+    </PropertyGroup>
+  </Target>
 
 </Project>
